--- a/TennisRulesWeb/build.gradle
+++ b/TennisRulesWeb/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'eclipse'
+apply plugin: 'cargo'
 sourceCompatibility = 1.8
 
 repositories {
@@ -29,13 +30,49 @@ dependencies {
  compile(project(':TennisRulesService'))
  providedCompile group: 'javax', name: 'javaee-api', version: '7.0'
  testCompile 'org.seleniumhq.selenium:selenium-firefox-driver:2.+'
-  testCompile group: 'junit', name: 'junit', version: '4.11'
-  testCompile 'org.mockito:mockito-core:1.9.5'
+ testCompile group: 'junit', name: 'junit', version: '4.+'
+ testCompile 'org.mockito:mockito-core:1.9.+'
  testRuntime 'org.seleniumhq.selenium:selenium-support:2.+'
+ def cargoVersion = '1.4.+'
+ cargo "org.codehaus.cargo:cargo-core-uberjar:$cargoVersion",
+        "org.codehaus.cargo:cargo-ant:$cargoVersion",
+		"org.wildfly:wildfly-controller-client:8.1.0.Final"
 }
 
 jar.enabled = true
 project.webAppDirName = 'WebContent'
 war {
 // from 'WebContent' 
-} 
+}
+
+cargo {
+ containerId = 'wildfly8x'
+ remote {
+  hostname = 'localhost'
+  port = 9900
+  username = 'imie'
+  password = '1m1e'
+ }
+}
+
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+
+    dependencies {
+        classpath 'org.gradle.api.plugins:gradle-cargo-plugin:1.5.1'
+    }
+}
+
+test.dependsOn cargoRedeployRemote
+
+//test{
+// exclude '**/*Fonctionel.*'
+//}
+
+//task integrationTest(type: Test, dependsOn: "test") {
+//   include '**/*Fonctionel.*'
+//}
+
