--- a/TennisRulesService/build.gradle
+++ b/TennisRulesService/build.gradle
@@ -3,45 +3,20 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 sourceCompatibility = 1.8
 
+group='imie'
+
 repositories {
     mavenCentral()
 }
 
-sourceSets {
- main {
-  java {
-   srcDir 'src/main/java'
-  }
-  resources {
-   srcDir 'src/main/resources'
-  }
- }
- test {
-  java {
-    srcDir 'src/test/java'
-  }
- }
-}
 
 test{
     outputs.upToDateWhen { false }
-}
+}	
 
 dependencies {
   testCompile group: 'junit', name: 'junit', version: '4.11'
   testCompile 'org.mockito:mockito-core:1.9.5'
   compile group: 'javax', name: 'javaee-api', version: '7.0'
 }
-
-task jenkinsTest{
-    inputs.files test.outputs.files
-    doLast{
-        def timestamp = System.currentTimeMillis()
-        //test.testResultsDir.eachFile { it.lastModified = timestamp }
-	//getReports().getJunitXml().getDestination().eachFile { it.lastModified = timestamp }
-	test.getReports().getJunitXml().getDestination().eachFile { it.lastModified = timestamp }
-    }
-}
-
-build.dependsOn(jenkinsTest)
 
