--- a/TennisRulesWeb/build.gradle
+++ b/TennisRulesWeb/build.gradle
@@ -6,43 +6,37 @@ apply plugin: 'eclipse'
 apply plugin: 'cargo'
 sourceCompatibility = 1.8
 
+group='imie'
+
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'org.gradle.api.plugins:gradle-cargo-plugin:1.5.1'
+    }
+}
+
+
 repositories {
     mavenCentral()
 }
 
-sourceSets {
- main {
-  java {
-   srcDir 'src/main/java'
-  }
-  resources {
-   srcDir 'src/main/resources'
-  }
- }
- test {
-  java {
-    srcDir 'src/test/java'
-  }
- }
+	
+war {
+ from 'WebContent' 
 }
 
 dependencies {
  compile(project(':TennisRulesService'))
  providedCompile group: 'javax', name: 'javaee-api', version: '7.0'
- testCompile 'org.seleniumhq.selenium:selenium-firefox-driver:2.+'
  testCompile group: 'junit', name: 'junit', version: '4.+'
- testCompile 'org.mockito:mockito-core:1.9.+'
+ testCompile 'org.seleniumhq.selenium:selenium-firefox-driver:2.+'
  testRuntime 'org.seleniumhq.selenium:selenium-support:2.+'
  def cargoVersion = '1.4.+'
  cargo "org.codehaus.cargo:cargo-core-uberjar:$cargoVersion",
         "org.codehaus.cargo:cargo-ant:$cargoVersion",
 		"org.wildfly:wildfly-controller-client:8.1.0.Final"
-}
-
-jar.enabled = true
-project.webAppDirName = 'WebContent'
-war {
-// from 'WebContent' 
 }
 
 cargo {
@@ -55,24 +49,6 @@ cargo {
  }
 }
 
-
-buildscript {
-    repositories {
-        jcenter()
-    }
-
-    dependencies {
-        classpath 'org.gradle.api.plugins:gradle-cargo-plugin:1.5.1'
-    }
-}
-
 test.dependsOn cargoRedeployRemote
 
-//test{
-// exclude '**/*Fonctionel.*'
-//}
-
-//task integrationTest(type: Test, dependsOn: "test") {
-//   include '**/*Fonctionel.*'
-//}
 
