new testResultDir timestamp

--- a/TennisRulesWeb/build.gradle
+++ b/TennisRulesWeb/build.gradle
@@ -4,7 +4,6 @@ apply plugin: 'war'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'eclipse'
 apply plugin: 'cargo'
-apply plugin: 'com.github.fowlie.GradleJenkinsTestPlugin'
 
 sourceCompatibility = 1.8
 
@@ -18,7 +17,6 @@ buildscript {
     }
     dependencies {
         classpath 'org.gradle.api.plugins:gradle-cargo-plugin:1.5.1'
-        classpath 'com.github.fowlie:gradle-jenkins-test:+'
     }
 }
 
@@ -56,5 +54,23 @@ cargo {
 
 test.dependsOn cargoRedeployRemote
 
+test{
+ def timestamp = System.currentTimeMillis()
+ doLast{
+// 	delete project.testResultsDir
+ 	testResultsDir.eachFile { it.lastModified = timestamp }
+ }
+}
 
+
+//task jenkinsTest {
+// inputs.files test.outputs.files
+// doLast {
+//  def timestamp = System.currentTimeMillis()
+//  if (test.testResultsDir.exists())
+//   test.testResultsDir.eachFile { it.lastModified = timestamp }
+// }
+//}
+
+//build.dependsOn(jenkinsTest)
 
