--- a/TennisRulesWeb/build.gradle
+++ b/TennisRulesWeb/build.gradle
@@ -54,7 +54,7 @@ cargo {
 
 test.dependsOn cargoRedeployRemote
 
-test{
+task jenkinsTest{
  def timestamp = System.currentTimeMillis()
  doLast{
 // 	delete project.testResultsDir
@@ -72,5 +72,5 @@ test{
 // }
 //}
 
-//build.dependsOn(jenkinsTest)
+build.dependsOn(jenkinsTest)
 
